--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
     <body>
-        
-        
+
+        <header class="header">
+            Some text
+        </header>
+
+
     </body>
 </html>
